--- a/public/css/style.css
+++ b/public/css/style.css
@@ -374,17 +374,20 @@ thead{
       flex-direction: column;
     }
     .calculatorH{
-      position: absolute;
-      bottom: 53%;
+      position: relative;
+      bottom: 0%;
       font-size: 20px;
       max-width: 150px;
-      right: 10%;
+      right: 0%;
     }
-
+    .testDiv{
+      display: flex;
+      gap: 30px;
+    }
     .calculatorImage{
-      position: absolute;
-      bottom: 33%;
-      right: 3%;
+      position: relative;
+      bottom: 0%;
+      right: 0%;
       transform: rotate(0deg);
       scale: 0.5;
     }
